syntax = "proto3";

package models;

option go_package = "pkg/transport/grpc/dto";

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string avatar_url = 5;
    bytes avatar_img = 6;
    string phone = 7;
    string bio = 8;
    repeated Participant participants = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
    optional string provider_id = 12;
    optional string provider = 13;
}

message Company {
    string id = 1;
    string name = 2;
    string codename = 3;
    int64 people_count = 4;
    string bin = 5;
    string address = 6;
    string description = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    ProjectList projects = 10;
}

message Role {
    string name = 1;
    string company_id = 2;
    repeated string permissions = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message Participant {
    string id = 1;
    string user_id = 2;
    string company_id = 3;
    string role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UserCredentials {
    string email = 1;
    string password = 2;
}

message AuthPayload {
    string session_id = 1;
    string access_token = 2;
    string refresh_token = 3; 
    User user = 4;
    int64 exp = 5;
}

message Task {
    string id = 1;
    string title = 2;
    string body = 3;
    string status = 4;
    string sprint_id = 5;
    string project_id = 6;
    int32 priority = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    string assignee_id = 10;
    google.protobuf.Timestamp due_date = 11;
    string code = 12;
}

message Project {
    string id = 1;
    string title = 2;
    string description = 3; 
    string status = 4;
    string company_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    int32 total_tasks = 8;
    repeated Sprint sprints = 9;
    string code_name = 10;
    int32 done_tasks = 12;
    string code_prefix = 13;
}

message Sprint {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string project_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    repeated Task tasks = 8;
    google.protobuf.Timestamp start_date = 9;
    google.protobuf.Timestamp end_date = 10;
}

message TaskComment {
    string id = 1;
    string body = 2;
    string task_id = 3;
    User user = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Document {
    string id = 1;
    string title = 2;
    optional bytes body = 3;
    string project_id = 4;
    google.protobuf.Timestamp created_at = 5;
}

message DocumentPDF {
    bytes body = 1;
    string title = 2;
    string doc_id = 3;
}

// FILTERS

message DocumentFilter {
    int32 page = 1;
    int32 per_page = 2;
    string project_id = 3;
    string title = 4;
    string date_from = 5;
    string date_to = 6;
    string order_by = 7;
    string order_direction = 8;
}

message SprintFilter {
    int32 page = 1;
    int32 per_page = 2;
    string project_id = 3;
    string title = 4;
    string description = 5;
    string project_name = 6;
    string date_from = 7;
    string date_to = 8;
    string order_by = 9;
    string order_direction = 10;
}

message ProjectFilter {
    int32 page = 1;
    int32 per_page = 2;
    string company_id = 3;
    string title = 4;
    string description = 5;
    string status = 6;
    string date_from = 7;
    string date_to = 8;
    string order_by = 9;
    string order_direction = 10;
}

message TaskFilter {
    int32 page = 1;
    int32 per_page = 2;
    string sprint_id = 3;
    string project_id = 4;
    string assignee_id = 5;
    string title = 6;
    string body = 7;
    string status = 8;
    int32 priority = 9;
    string sprint_name = 10;
    string project_name = 11;
    string date_from = 12;
    string date_to = 13;
    string order_by = 14;
    string order_direction = 15;
    string code = 16;
}

message TaskCommentFilter {
    int32 page = 1;
    int32 per_page = 2;
    string task_id = 3;
    string user_id = 4;
    string date_from = 5;
    string date_to = 6;
    string order_by = 7;
    string order_direction = 8;
}

message UserFilter {
    int32 page = 1;
    int32 per_page = 2;
    string role = 3;
    string company_name = 4;
    string company_codename = 5;
    string company_id = 6;
    string user_id = 7;
    string user_email = 8;
    string user_first_name = 9;
    string user_last_name = 10;
    string user_phone = 11;
    string date_from = 12;
    string date_to = 13;
    string order_by = 14;
    string order_direction = 15;
}

message CompanyFilter {
    int32 page = 1;
    int32 per_page = 2;
    string role = 3;
    string code_name = 4;
    string company_name = 5;
    string company_id = 6;
    string user_id = 7;
    string date_from = 8;
    string date_to = 9;
    string order_by = 10;
    string order_direction = 11;
}

message ParticipantFilter {
    int32 page = 1;
    int32 per_page = 2;
    string user_id = 3;
    string company_id = 4;
    string role = 5;
    string date_from = 6;
    string date_to = 7;
    string order_by = 8;
    string order_direction = 9;
}


// LISTS

message DocumentList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Document items =  5;
}

message SprintList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Sprint items = 5;
}

message ProjectList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Project items = 5;
}

message TaskList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Task items = 5;
}

message TaskCommentList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated TaskComment items = 5;
}

message CompanyList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Company items = 5;
}

message UserList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated User items = 5;
}

message ParticipantList {
    int32 page = 1;
    int32 per_page = 2;
    int32 total_pages = 3;
    int32 total_items = 4;
    repeated Participant items = 5;
}

// CREATION
message DocumentCreation {
    string title = 1;
    string sprint_id = 2;
    string project_id =3;
}

message TaskCreation {
    string title = 1;
    string body = 2;
    string status = 3;
    string sprint_id = 4;
    string project_id = 5;
    int32 priority = 6;
    string assignee_id = 7;
    google.protobuf.Timestamp due_date = 8;
}

message SprintCreation {
    string title = 1;
    string description = 2;
    string project_id = 3;
    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp end_date = 5;
}

message ProjectCreation {
    string title = 1;
    string description = 2;
    string company_id = 3; 
    string code_name = 4;
    string code_prefix = 5;
}

message TaskCommentCreation {
    string body = 1;
    string task_id = 2;
    string user_id = 3;
}

message NewUser {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    optional bytes avatar_img = 5;
    optional string avatar_url = 6;
}

message NewCompany {
    string name = 1;
    string codename = 2;
    string bin = 3;
    string address = 4;
    string description = 5;
}

message NewRole {
    string name = 1;
    repeated string permissions = 2;
    string company_id = 3;
}

message NewParticipant {
    string user_id = 1;
    string company_id = 2;
    string role_id = 3;
}

// OAuth2 related models
message OAuth2Provider {
  string id = 1;
  string name = 2;
  string client_id = 3;
  string client_secret = 4;
  string redirect_url = 5;
  repeated string scopes = 6;
}

